<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup Using Email</string>
    <string name="signup_phone">Signup Using Phone</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="profile">User Profile</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="fetch_post">All Posts</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="retry">Retry</string>
    <string name="empty_screen">No data</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
